objects/Deal_Reg__c.object
<CustomObject>
    <fields>
        <fullName>Partner_Account_Program__c</fullName>
        <formula>TEXT(Partner_Account__r.Model_Type_Partner__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Account Program</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Category__c</fullName>
        <formula>TEXT(Partner_Account__r.Partner_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Category</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Program__c</fullName>
        <formula>TEXT(Partner_Account__r.Model_Type_Partner__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Partner Program</label>
        <type>Text</type>
    </fields>
</CustomObject>